Update build targets and initialize database recovery
Include `tuple_util.cpp` in `simple_db` target and adjust `spsql_client` to use a default URL for simplicity. Enhance `spsql_d` by adding database recovery routines to ensure consistency during startup.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(./)
 
-add_executable(simple_db simple_db.cpp)
+add_executable(simple_db simple_db.cpp tuple_util.cpp)
 add_executable(simple_sql db.cpp tuple_util.cpp simple_sql.cpp)
 add_executable(spsql_d db.cpp tuple_util.cpp spsql_d.cpp)
 add_executable(spsql_client spsql_client.cpp)
